# imu_compass

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: imu_compass.yaml  test.yaml
include/imu_compass/: imu_compass.h
launch/: imu_compass.launch
scripts/: compute_calibration  compute_calibration.py
src/: imu_compass.cpp
